// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportChannelForm renders component 1`] = `
<WithStyles(Grid)
  className="content-mock"
  container={true}
>
  <WithStyles(Typography)
    className="subfieldTitle-mock"
    variant="subtitle1"
  >
    Channel URI
  </WithStyles(Typography)>
  <WithStyles(Grid)
    container={true}
    direction="row"
    item={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    >
      <TextField
        fullWidth={true}
        id="channel-uri"
        margin="none"
        onChange={[Function]}
        placeholder="zbay.io/channel/..."
        required={false}
        select={false}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
    <Memo(WithStyles(ProgressFab))
      className="fab-mock"
      disabled={false}
      label="Unlock"
      loading={false}
      onClick={[Function]}
      success={false}
    >
      <pure(VpnKeyIcon) />
    </Memo(WithStyles(ProgressFab))>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`ImportChannelForm renders decoded 1`] = `""`;

exports[`ImportChannelForm renders decoding 1`] = `
<WithStyles(Grid)
  className="content-mock"
  container={true}
>
  <WithStyles(Typography)
    className="subfieldTitle-mock"
    variant="subtitle1"
  >
    Channel URI
  </WithStyles(Typography)>
  <WithStyles(Grid)
    container={true}
    direction="row"
    item={true}
  >
    <WithStyles(Grid)
      item={true}
      xs={true}
    >
      <TextField
        fullWidth={true}
        id="channel-uri"
        margin="none"
        onChange={[Function]}
        placeholder="zbay.io/channel/..."
        required={false}
        select={false}
        value=""
        variant="outlined"
      />
    </WithStyles(Grid)>
    <Memo(WithStyles(ProgressFab))
      className="fab-mock"
      disabled={false}
      label="Unlock"
      loading={true}
      onClick={[Function]}
      success={false}
    >
      <pure(VpnKeyIcon) />
    </Memo(WithStyles(ProgressFab))>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
